# ChatGPT-Repo-MCP

./: .env.example  .gitignore  README.md  README_PUBLIC_EN.md  README_RU.md  pyproject.toml
deploy/caddy/: Caddyfile.example
deploy/nginx/: chatrepo-mcp.conf.example
deploy/systemd/: chatrepo-mcp.service
docs/: ARCHITECTURE.md  CONNECT_CHATGPT.md  DEPLOY_VPS.md  VPS_LOCAL_RUNBOOK.md
scripts/: check_tools.py  install_ubuntu.sh  smoke_test.sh
src/chatrepo_mcp/: __main__.py  command_tools.py  config.py  edit_tools.py  fs_tools.py  git_tools.py  parsers.py  profile.py  security.py  server.py  workflows.py
tests/: test_command_tools.py  test_edit_tools.py  test_output_parsers.py  test_profile.py  test_security.py  test_tool_schema.py  test_workflows.py
